fix: use production base image with locale set
We used to build our own JRE and copy that over into a `ubuntu:focal`
container which doesn't have a locale set. Since `eclipse-temurin` now
ships jre images where the locale *is* set, we can use that instead of
building our own JRE.